fixes thinbanner, header spacing, and makes header callibration marks scroll w page

--- a/web/src/css/index.css
+++ b/web/src/css/index.css
@@ -60,8 +60,9 @@ small {
   max-width: 100%;
   height: 2rem;
   overflow-x: hidden;
+  border-bottom:1px solid black;
   text-align:center;
-  background:#ffff66;
+  background:#ffffff;
 }
 
 .marquee-track {
